Name:                snap-boomerang-example
Version:             0.1
Synopsis:            Pretty urls with snap and boomerang
Description:         It is an example how to integrate boomerang and web-routes into snap application
License:             BSD3
Author:              Yuras Shumovich
Maintainer:          shumovichy@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable snap-boomerang-example
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.10.0,
    heist >= 0.13.0,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl >= 2 && < 3,
    snap == 0.13.*,
    lens >= 4.1,
    snap-core   >= 0.9 && < 0.11 ,
    snap-server >= 0.9 && < 0.11,
    snap-loader-static == 0.9.*,
    text >= 0.11 && < 1.2,
    time >= 1.1 && < 1.5,
    xmlhtml >= 0.1,
    web-routes >= 0.27.5,
    web-routes-th >= 0.22.2 ,
    web-routes-boomerang >= 0.28.2,
    boomerang >= 0.28.2

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

